--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 .env.backup
 .env.production
 .phpunit.result.cache
+.DS_Store
 Homestead.json
 Homestead.yaml
 auth.json
@@ -17,3 +18,5 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+/.DS_Store
+
